--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "express": "^5.1.0",
     "mongoose": "^8.16.0",
     "multer": "^2.0.1",
+    "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
     "svix": "^1.67.0"
   }
